--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -14,6 +14,6 @@ ul{
     .container{
         width: 1200px;
         margin: 0 auto;
-        padding: 0 15px;
+        // padding: 0 15px;
     }
 }
