--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -10,6 +10,15 @@ footer{
     color:$hover;
 }
 }
+@media screen and (min-width:768px) and (max-width:1199px) {
+    footer{
+        & .container{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content:space-evenly;
+}
+}
+}
 @media screen and (min-width:1200px) {
     footer{
         & .container{
@@ -18,25 +27,32 @@ footer{
 }
 }
 }
-.footer-address{
-    width: 232px;
-    margin: 0 auto;
+@media screen and (max-width:767px){
+    .footer-address{
+        width: 232px;
+        margin: 0 auto;
 & .logo{
     margin: 0px 30px;
 }
-// & .address{
-//     display: flex;
-//     width: 232px;
-//     flex-direction: column;
-//     justify-content: center;
-// }
+    }
+}
+
+@media screen and (min-width:768px)  and (max-width:1199px){
+    .footer-address{
+        width: 232px;
+    & .logo{
+        margin: 0px 30px;
+    }
+}
 }
 .address{ 
      margin-top: 24px;
      line-height: 30px;
 }
-.footer-address_el{
-    margin: 0px 40px;
+@media screen and (max-width:1199px) {
+    .footer-address_el{
+        margin: 0px 40px;
+    }
 }
 .footer-links {
 & p{
@@ -60,15 +76,39 @@ footer{
     fill:$white;
 }
 }
-// .footer-form{
-//     position: relative;
-// }
+@media screen and (min-width:768px) {
+    .footer-links{  
+& p{
+    margin: 0;
+}
+    }
+}
+@media screen and (min-width:1200px) {
+    .footer-links{
+& p{
+    margin: 12px 0px 20px;
+}
+    }
+}
 .footer-sending { 
 & p{
     @include fonts($font-weight:700);
     margin: 60px 0px 20px;
     text-align: center;
 }
+}
+@media screen and (min-width:1200px) {
+    .footer-sending{
+& p{
+    margin: 12px 0px;
+    text-align: start;
+}
+}
+}
+@media screen and (min-width:1200px){
+    .footer-form{
+        display: flex;
+    } 
 }
 .footer-input{
     width:450px;
@@ -78,16 +118,25 @@ footer{
     margin-right: 6px;
     padding-left: 15px;
 }
+@media screen and (min-width:1200px) {
+    .footer-input{
+        width: 358px;
+}
+}
 .footer-submit{
     position: relative;
     display: block;
     width: 200px;
     height: 50px;
     padding: 18px 28px 18px 0px;
-    margin: 20px auto;
     @include border($border:none);
 
     @extend %buttons;
+}
+@media screen and (max-width:1199px) {
+    .footer-submit{
+        margin: 20px auto;
+    }
 }
 .send-svg{
     position: absolute;
