--- a/sass/components/index/_modal-window.scss
+++ b/sass/components/index/_modal-window.scss
@@ -9,7 +9,7 @@
     cursor: pointer;
 }
 .no-scroll{
-    overflow:visible;
+    overflow:hidden;
 }
 .backdrop{
     position: fixed;
@@ -20,33 +20,44 @@
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 1;    
     z-index: 1;
+    overflow: auto;  
+      
 }
 .is-hidden{
     opacity: 0;
-    pointer-events: none;   
+    pointer-events: none;
 }
 .modal{
     position: absolute;
     top: 10%;
-    left: 0%;
-    min-width: 450px;
-    min-height: 609px;
+    left: 15px;
+    width: 450px;
+    height: 609px;
     transform: translate(-50% -50%);
     padding-top: 9px;
     background-color:$white;
 }
-@media screen and (min-width:1024px) {
+@media screen and (min-width:768px) {
     .modal{
-        top: 10%;
+        top: 20%;
+        left: 20%;
+    }
+}
+@media screen and (min-width:1200px) {
+    .modal{
+        top: 20%;
         left: 30%;
         min-width: 528px;
         min-height: 581px;
     }
 }
 .modal-close-btn{
+    position: absolute;
+    top: 8px;
+    right: 8px;
     width: 30px;
     height: 30px;
-    margin-left: 490px;
+    // margin-left:440px;
     padding: 4px 4px;
 
     border: solid 2px rgba(0, 0, 0, 0.1);
@@ -63,12 +74,18 @@
     } 
 }
 .form-container{
-    width: 448px;
+    width:370px;
     margin: 0px auto;
 & h1{
     @include fonts($font-size:20px, $font-weight:700);
     text-align: center;
+    line-height: 30px;
 }
+}
+@media screen and (min-width:1200px){
+    .form-container{
+        width: 448px;
+    }
 }
 .modal-form{
     display: flex;
@@ -100,6 +117,11 @@
     cursor: pointer;
 }
 }
+@media screen and (max-width:480px) {
+    .modal-form_el , .modal-form_comment{
+        width: 370px;
+    }
+}
 .modal-input-svg{
     position:absolute;
     left: 15px;
@@ -121,7 +143,7 @@
 }
 }
 .checkbox{
-    @include fonts();
+    @include fonts($font-size:12px);
     color: $grey-text;
     margin: 20px auto;
 & input{
@@ -135,15 +157,25 @@
     color: $hover; 
 }
 }
+@media screen and (min-width:1200px){
+    .checkbox{
+        @include fonts();
+    }
+}
 .send-form{
     @include border($border:none);
     width: 200px;
     height: 50px;
     background-color:$hover;
     box-shadow: 0px 2px 5px $grey-text;
-    margin: 32px auto;
+    margin: 22px auto;
     cursor: pointer;
 
     @include fonts($font-size:16px, $font-weight:700);
     color:$white;
+}
+@media screen and (min-width:1200px){
+    .send-form{
+        margin: 32px auto;
+    }
 }
