--- a/css/style.css
+++ b/css/style.css
@@ -25,33 +25,14 @@ ul {
 
 .container {
   width: auto;
-  padding: 0 15px;
+  padding: 0px 15px;
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
     margin: 0 auto;
-  }
-}
-@-webkit-keyframes textAppear {
-  0% {
-    -webkit-transform: translate(0, 100%);
-            transform: translate(0, 100%);
-  }
-  100% {
-    -webkit-transform: translate(0, 0%);
-            transform: translate(0, 0%);
-  }
-}
-@keyframes textAppear {
-  0% {
-    -webkit-transform: translate(0, 100%);
-            transform: translate(0, 100%);
-  }
-  100% {
-    -webkit-transform: translate(0, 0%);
-            transform: translate(0, 0%);
+    padding: 0px;
   }
 }
 .header-items {
@@ -61,6 +42,9 @@ ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media screen and (min-width: 1200px) {
@@ -83,18 +67,18 @@ ul {
   color: rgb(33, 150, 243);
 }
 
-.navigation {
-  display: none;
+@media screen and (max-width: 768px) {
+  .navigation {
+    display: none;
+  }
 }
-
 @media screen and (min-width: 768px) {
   .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     margin-left: 85px;
     width: 519px;
   }
@@ -104,12 +88,6 @@ ul {
 }
 @media screen and (min-width: 1200px) {
   .navigation {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     margin-left: 95px;
     width: 933px;
   }
@@ -247,6 +225,190 @@ ul {
     display: none;
   }
 }
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.5;
+  color: #212121;
+  background-color: #fff;
+}
+
+.page-header {
+  -webkit-box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.page-header .container {
+  min-height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+}
+.menu .link {
+  padding: 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
+}
+
+.menu-toggle {
+  height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #FFFFFF;
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  overflow: scroll;
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #fff;
+}
+
+.js-close-menu_svg {
+  fill: #000000;
+}
+.js-close-menu_svg:hover {
+  fill: rgb(33, 150, 243);
+  cursor: pointer;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  font-family: "Roboto";
+  font-size: 40px;
+  font-weight: 500;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: #212121;
+  text-decoration: none;
+}
+.mobile-menu .link:hover, .mobile-menu .link:focus {
+  color: rgb(33, 150, 243);
+}
+
+.mobile-address {
+  margin-top: 300px;
+  line-height: 70px;
+}
+.mobile-address li .address_el {
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: 500;
+}
+.mobile-address li .address_el:hover, .mobile-address li .address_el:focus {
+  color: rgb(33, 150, 243);
+}
+.mobile-address li:first-child .address_el {
+  font-family: "Roboto";
+  font-size: 34px;
+  font-weight: 500;
+}
+
+.mobile-networks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 46px;
+}
+.mobile-networks li:first-child .mobile-networks_el {
+  padding: 0px 10px 0px 0px;
+}
+.mobile-networks li:last-child .mobile-networks_el {
+  border-right: none;
+}
+.mobile-networks_el {
+  font-family: "Roboto";
+  font-size: 18px;
+  font-weight: 500;
+  color: rgb(33, 150, 243);
+  padding: 0px 10px;
+  border-right: 2px solid rgba(33, 33, 33, 0.2);
+}
+
 .modal-open-btn {
   font-family: "Roboto";
   font-size: 16px;
@@ -437,7 +599,7 @@ ul {
   font-size: 12px;
   font-weight: 400;
   color: #757575;
-  margin: 20px auto;
+  margin: 10px auto 20px;
 }
 .checkbox input {
   width: 16px;
@@ -466,7 +628,7 @@ ul {
   background-color: rgb(33, 150, 243);
   -webkit-box-shadow: 0px 2px 5px #757575;
           box-shadow: 0px 2px 5px #757575;
-  margin: 22px auto;
+  margin: 0 auto;
   cursor: pointer;
   font-family: "Roboto";
   font-size: 16px;
@@ -487,7 +649,8 @@ ul {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(130, 132, 160, 0.4)), url(/img/hero-bg.png);
   height: 400px;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -508,11 +671,14 @@ ul {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(130, 132, 160, 0.4))), url(/img/hero-bg@2x.png);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(130, 132, 160, 0.4)), url(/img/hero-bg@2x.png);
     background-size: cover;
+    background-repeat: no-repeat;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
     height: 600px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(130, 132, 160, 0.4))), url(/img/hero-background.png);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(130, 132, 160, 0.4)), url(/img/hero-background.png);
   }
 }
 .solution {
@@ -539,21 +705,6 @@ ul {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-top: 60px;
-}
-.features h4 {
-  font-family: "Roboto";
-  font-size: 14px;
-  font-weight: 700;
-  color: #212121;
-  margin-bottom: 0px;
-  text-align: center;
-}
-.features p {
-  font-family: "Roboto";
-  font-size: 14px;
-  font-weight: 400;
-  color: #757575;
-  line-height: 25px;
 }
 
 @media screen and (min-width: 768px) {
@@ -584,6 +735,20 @@ ul {
   width: 450px;
   line-height: 10px;
 }
+.features_li h4 {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 700;
+  color: #212121;
+  margin-bottom: 0px;
+}
+.features_li p {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
+  color: #757575;
+  line-height: 25px;
+}
 .features_li::before {
   display: block;
   content: "";
@@ -598,9 +763,14 @@ ul {
   background-position: center;
 }
 
+@media screen and (max-width: 767px) {
+  .features_li h4 {
+    text-align: center;
+  }
+}
 @media screen and (min-width: 768px) {
   .features_li {
-    width: 354px;
+    width: calc((100% - 30px) / 2);
   }
   .features_li::before {
     width: 354px;
@@ -609,7 +779,6 @@ ul {
 @media screen and (min-width: 1200px) {
   .features_li {
     width: calc((100% - 90px) / 4);
-    width: 270px;
   }
   .features_li::before {
     width: 270px;
@@ -749,7 +918,7 @@ ul {
 }
 @media screen and (min-width: 1200px) {
   .team-members {
-    width: calc((100% - 90px) / 4);
+    width: 270px;
   }
   .team-members img {
     height: 270px;
@@ -949,11 +1118,14 @@ ul {
 }
 .project-el {
   position: relative;
-  width: 450px;
   height: 404px;
+  width: 450px;
   margin-bottom: 30px;
   line-height: 0px;
   overflow: hidden;
+}
+.project-el img {
+  width: 100%;
 }
 .project-el:hover {
   -webkit-box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
@@ -961,16 +1133,10 @@ ul {
   cursor: pointer;
 }
 .project-el:hover .hover-text {
-  display: block;
-  -webkit-animation-name: "textAppear";
-          animation-name: "textAppear";
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  bottom: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
   .project-el {
     width: 354px;
   }
@@ -992,15 +1158,18 @@ ul {
 }
 @media screen and (min-width: 1200px) {
   .project-el {
-    width: calc((100% - 60px) / 3);
+    width: calc((100% - 90px) / 3);
+  }
+  .project-el img {
+    width: 370px;
   }
 }
 .hover-text {
-  display: none;
   position: absolute;
-  left: 0;
-  top: 0;
-  height: 294px;
+  bottom: -100%;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   line-height: 25px;
   padding: 63px 24px;
