--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -8,12 +8,12 @@ ul{
 }
 .container{
     width: auto;
-    padding: 0 15px;
+    padding: 0px 15px;
 }
 @media screen and (min-width:1200px){
     .container{
         width: 1200px;
         margin: 0 auto;
-        // padding: 0 15px;
+        padding: 0px;
     }
 }
