--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,7 @@
 .header-items{
     display: flex;
     justify-content:space-between;
+    align-items: center;
 }
 @media screen and (min-width:1200px) {
     .header-items{
@@ -18,13 +19,18 @@
 .logo-decor-text{
     color: $hover;
 }
-.navigation {
-    display: none;
+// .navigation {
+//     display: none;
+// }
+@media screen and (max-width:768px){
+    .navigation {
+        display: none;
+    }
 }
 @media screen and (min-width:768px){
     .navigation{
         display: flex;  
-        justify-content:space-between;
+        justify-content:space-around;
         margin-left: 85px;
         width: 519px;
         &:focus-within{
@@ -34,8 +40,6 @@
 }
 @media screen and (min-width:1200px) {
     .navigation{
-    display: flex;  
-    justify-content:space-between;
     margin-left: 95px;
     width: 933px;
     &:focus-within{
