--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,8 +2,9 @@
 @import"./utils/mixin";
 @import"./utils/placeholder";
 @import"./components/common";
-@import'./utils/animation';
+// @import'./utils/animation';
 @import"./components/header";
+@import"./components/index/mobile-menu";
 @import"./components/index/modal-window";
 @import"./components/index/main";
 @import"./components/portfolio/main";
